2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Completed missing translations
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Fixed bugs in File and EmbeddedContent
	* Completed first iteration of EmbeddedContent
	* Can now play multimedia content
	* Could not test fallback with my browser ( Safari and Firefox )
	* Need help to test content in different browser to see how it reacts...
	
2005-04-22 François Proulx <francois.proulx@gmail.com>
	* Fixed bug in FlickrPhotostream.php
	* Params did not match new methods requirements ( getUserByEmail )
	* Changed stylesheet class name for Flickr to match new changes
	* Fixed bugs in File
	* Wrote part of EmbeddedContent ( partially working )
	* TODO: add support for parameters and attributes in EmbeddedContent
	
2005-04-22 François Proulx <francois.proulx@gmail.com>
	* Fix schema version in François's commit
	
2005-04-21 François Proulx <francois.proulx@gmail.com>
	* Added explicit admin UI exceptions support for Flickr
	* Completed File and Picture objects
	
2005-04-20 François Proulx <francois.proulx@gmail.com>
	* Completed Flickr support ( explicit exceptions catching )
	* Most of File object is done
	* Fixed bug in generic_object_admin.php
	* changed stylesheet class tags for Flickr
	
2005-04-18 François Proulx <francois.proulx@gmail.com>
	* Added Flickr content support
	* Part of File object is done
	
2005-04-19 Benoit Grégoire  <bock@step.polymtl.ca>
	* Working (beta...) content manager and portal.
	* Add content preview mode
	
2005-04-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Hotspot and network content association, continue access control work.
	* hotspot_owner.php: Fix wrong assignement of user_id that prevented the script from working.
	* All files:  Remove whitespace and carriage return after the ?> closing tags.
	
2005-04-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Much more complete admin, initial access control work.

2005-04-15 Benoit Grégoire  <bock@step.polymtl.ca>