@@ -338,6 +338,7 @@ function update_schema()
             echo "<h2>Preparing SQL statements to update schema to version  $new_schema_version</h2>"; 
            	$sql .= "\n\nUPDATE schema_info SET value='$new_schema_version' WHERE tag='schema_version';\n";
             $sql .= "ALTER TABLE files ADD COLUMN url text;";
+            $sql .= "ALTER TABLE flickr_photostream ADD COLUMN preferred_size text;";
             $sql .= "CREATE TABLE embedded_content (
 				embedded_content_id text NOT NULL,
 				embedded_file_id text,
