@@ -1,4 +1,7 @@
 2005-04-23 François Proulx <francois.proulx@gmail.com>
+	* Added Preferred Size support for Flickr pictures
+	
+2005-04-23 François Proulx <francois.proulx@gmail.com>
 	* Completed missing translations
 	
 2005-04-23 François Proulx <francois.proulx@gmail.com>
